@@ -3,18 +3,12 @@
 # Load support procs.
 load_lib gfortran-dg.exp
 
-# If a testcase doesn't have special options, use these.
-global DEFAULT_FFLAGS
-if ![info exists DEFAULT_FFLAGS] then {
-    set DEFAULT_FFLAGS " -fopenmp"
-}
-
 # Initialize `dg'.
 dg-init
 
 # Main loop.
 gfortran-dg-runtest [lsort \
-       [glob -nocomplain $srcdir/$subdir/*.\[fF\]{,90,95} ] ] $DEFAULT_FFLAGS
+       [glob -nocomplain $srcdir/$subdir/*.\[fF\]{,90,95} ] ] " -fopenmp"
 
 # All done.
 dg-finish
