@@ -1,3 +1,8 @@
+2005-09-24  Jakub Jelinek  <jakub@redhat.com>
+
+	* testsuite/libgomp.fortran/omp_atomic1.f90: New test.
+	* testsuite/libgomp.fortran/omp_atomic2.f90: New test.
+
 2005-09-23  Jakub Jelinek  <jakub@redhat.com>
 
 	* testsuite/libgomp.fortran/omp_parse1.f90: Add a test for !$omp do
